oxiplate-derive/tests/broken/extends/extends-extends.stderr
error: Only block statements are allowed here, along with comments and whitespace.
 --> tests/broken/extends/extends-extends.rs:5:49
  |
5 |     r#"{% extends "extends-wrapper.html.oxip" %}{% extends "extends-wrapper.html.oxip" %}"#
  |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
